# Sentinel

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/agents/: __init__.py  llm.py  pipeline.py  procurement.py  risk_scoring.py  scenario.py  signal_extraction.py
backend/app/api/: __init__.py  ws.py
backend/app/api/routers/: backtest.py  corridors.py  health.py  recommendations.py  scenarios.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/seed/: __init__.py  inject_escalation.py  seed.py
backend/app/services/: __init__.py  ais.py  corpus.py  gdelt.py  ofac.py  prices.py
backend/app/sim/: __init__.py  backtest.py  flow_model.py
backend/tests/: test_ais.py  test_backtest.py  test_extraction.py  test_flow_model.py  test_procurement.py  test_risk_scoring.py
config/: assumptions.yaml  corridors.yaml  crudes.yaml  refineries.yaml  scenarios.yaml
data/cache/: brent.json  gdelt_baseline.json  gdelt_live.json  vessels.json
docs/: architecture.md  deck-notes.md  deck.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chip.tsx  CorridorMap.tsx  EvidencePanel.tsx  Formula.tsx  RecommendationCard.tsx  ScenarioResult.tsx  SignalFeed.tsx  StatusBar.tsx
frontend/src/lib/: api.ts  format.ts  land.json  types.ts
frontend/src/screens/: BacktestScreen.tsx  MapScreen.tsx  (+2 more)
scripts/: demo.ps1
(+1 files in other folders)
