[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel — energy supply chain resilience engine (ET AI Hackathon 2026, PS2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Live mode extras — not required for the offline demo (LLM_MODE=mock).
live = [
    "anthropic>=0.40",
    "yfinance>=0.2.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
